- removed HDTraceMPIWrapper.c (because it is generated dynamically) - changed output naming (removed leading 'trace_')

--- a/PIOsimHD-Maint/mpiwrapperNew/doc/TODO.org
+++ b/PIOsimHD-Maint/mpiwrapperNew/doc/TODO.org
@@ -390,6 +390,7 @@ Per HashMap Communicator ID speichern
 ** DONE create_sim-wrapper formatieren
 ** DONE create_sim-wrapper: split collecve *_end funktionen: attribute schreiben!
 ** DONE Verzeichnisstruktur umstellen
+** TODO trace_ vor dem tracefile weglassen
 ** TODO clean getFileIdEx
 ** TODO set_view loggen -> datentyp
 ** DONE Endtags!
