- images for the documentation

--- a/PIOsimHD-Maint/mpiwrapperNew/doc/mpiwrapper.tex
+++ b/PIOsimHD-Maint/mpiwrapperNew/doc/mpiwrapper.tex
@@ -137,7 +137,7 @@ is an example of loading them into HDJumpshot:
 
 \begin{figure}[h]
   \centering
-  \includegraphics[scale=1]{img/jumpshot-in-action}
+  \includegraphics[scale=1]{img/jumpshot}
   \caption{mpi-io-test as displayed by Jumpshot}
   \label{fig:jumpshot}
 \end{figure}
