- added implementation dependent include files

--- a/PIOsimHD-Maint/mpiwrapperNew/doc/mpiwrapper.tex
+++ b/PIOsimHD-Maint/mpiwrapperNew/doc/mpiwrapper.tex
@@ -19,9 +19,7 @@
 \lstset{frame=trBL}
 
 \usepackage{graphicx}
-%\usepackage{url}
-%\usepackage{float}
-\usepackage{cmbright}   
+%\usepackage{cmbright}   
 
 \parindent0cm
 \parskip2.5mm
