--- a/PIOsimHD-Doc/Presentations/Leogang-09-09/folien.tex
+++ b/PIOsimHD-Doc/Presentations/Leogang-09-09/folien.tex
@@ -2,10 +2,10 @@
 %\documentclass[notes=show]{beamer}
 
 \usepackage[utf8]{inputenc}
-\usepackage[german]{babel}
+\usepackage[ngerman]{babel}
 \usepackage{rotating}
 
-\usepackage{german, latexsym}
+\usepackage{latexsym}
 \usepackage{floatflt}
 \usepackage{graphicx}
 %\definecolor{lightblue}{rgb}{0.8,0.9,1.0}
@@ -139,10 +139,10 @@ Julian M. Kunkel
   \itemm{\# CPUs, Abarbeitungsgeschwindigkeit}
 \item Netzwerkkarte:
   \itemm{Latenz, Durchsatz}
-\item Server Cache Layer - Caching von I/O Daten, steuert I/O Subsystem
-\itemm{Cache Größe}
+\item Server Cache Layer:
+\itemm{Cache Größe, Algorithmus}
 \item I/O Subsystem:
-\itemm {Je nach Datei und letztem Offset wird die Zugriffszeit ermittelt
+\itemm {Letzter Zugriff (Datei, Offset) bestimmt Zugriffszeit
     \item Track-To-Track Zugriffzeit, Mittlere Zugriffszeit}
 \item Switch:
   \itemm{Store-and-Forward Switching
@@ -151,9 +151,16 @@ Julian M. Kunkel
   \itemm{Latenz, Durchsatz}
 }
 
-\subsection{Datenfluss Model}
+\subsection{Netzwerk Datenfluss Model}
 \myframe{Datenfluss Model}{
-  \item Datenflüsse als Flüsse von Paketen
+  \item Datenflüsse als Flüsse von Paketen (Transfer Granularität)
+  \item Datenfluss Model ist an Realität angelehnt garantiert aber optimalen Transfer (unter gegegebener Granularität) 
+  \item Server können Datenflüsse aktiv blockieren z.B. bei gefülltem I/O Cache 
+  \item Überholvorgänge innerhalb des Netzwerks sind nicht möglich
+  \item Gegenwärtig nur eine Route
+} 
+
+\myframe{Paketübertragung}{
   \item Eine Netzwerkkomponente kann eine Menge von Paketen transferieren 
   \itemm{Bis das Kabel mit Daten saturiert ist
     \item Der weitere Datenfluss wird dann blockiert} 
@@ -164,12 +171,8 @@ Julian M. Kunkel
   \item Es wird ein Fluss pro Ziel nach obigem Schema verwaltet
    \itemm{Engpässe die in Flussrichtung auftreten blockieren nicht den Transfer an andere Adressen
      \item Anschaulich: ein Switch verwaltet pro Netzwerkadresse eine Warteschlange mit fester Länge
-    }
-  \item Server können Datenflüsse aktiv blockieren z.B. bei gefülltem I/O Cache 
-  \item Datenfluss Model ist an Realität angelehnt garantiert aber optimalen Transfer (unter gegegebenem Paketmaximum) 
-  \item Überholvorgänge innerhalb des Netzwerks sind nicht möglich
-  \item Gegenwärtig nur eine Route
-} 
+   }
+}
 
 \section{Software Model}
 \subsection{Software Model}
@@ -207,17 +210,16 @@ Julian M. Kunkel
   \begin{block}{Diskrete Ereignis-Simulation}
   Solange Ereignisse vorhanden sind:
   \itemm{    
-    Bearbeite (ein) frühestes Ereignis durch delegation an die entsprechende Komponente
+    Bearbeite (ein) frühestes Ereignis durch delegation an zuständige Komponente
     \item Erzeugt ggf. weitere Ereignisse in der Zukunft
     }
   \end{block}
 
-\begin{block}{Jobs}
+\begin{block}{Job == Auftrag - durch blockierende Verarbeitung realisiert}
     \begin{itemize}
-     \item Operationen die von einer Komponente exklusiv bearbeitet werden
-     \item Beispiel: Datenpakete
      \item Start und Ende Ereignis
-     \item Bearbeitung von Jobs wird von Komponente Verwaltet und erfolgt in FIFO
+     \item Beispiel: Datenpakete werden durch Store-and-forward weitergeleitet
+     \item Bearbeitung von Jobs wird von Komponenten selbstverwaltet (meist FIFO)
     \end{itemize}   
   \end{block}
 }
@@ -259,9 +261,9 @@ Prozessanzahl & Laufzeit in s & Simulierte Laufzeit & Simuliert/Real \\
 
 }
 
-\subsection{I/O Optimierungen}
+\subsection{Evaluation von I/O Optimierungen}
 
-\myframe{I/O Optimierungen}{
+\myframe{Evaluation von I/O Optimierungen}{
   \begin{block}{Ziele}
   \item Effizienz verschiedener Optimierungen soll überprüft werden
   \item Kollektive Optimierungen - Two-Phase* vs. Serverseitige Optimierungen
@@ -297,9 +299,9 @@ Prozessanzahl & Laufzeit in s & Simulierte Laufzeit & Simuliert/Real \\
 \myframe{Fazit}{
   \item Einfaches Model für Simulation von MPI und Cluster Hardware
   \item Geeignet für Simulation von heterogenen Umgebungen und Netztopologien
-  \item Testen von alternativen Implementierungen für MPI Befehle
-  \item Verschiedene I/O Optimierungen wurden evaluiert
-  \item Server-Seitige Optimierung in den meisten Fällen ausreichend
+  \item Alternative Implementierungen für MPI Befehle evaluieren
+  \item Ergebnisse am beispiel von I/O Optimierungen
+  \itemm {Server-Seitige Optimierung in den meisten Fällen ausreichend}
 }
 
 
@@ -336,21 +338,22 @@ Prozessanzahl & Laufzeit in s & Simulierte Laufzeit & Simuliert/Real \\
 
 \myframe{Ziele}{
   \item Vergleiche (simulierten) Energieverbrauch der Anwendung mit verschiedenen Sparstrategien
+  \item Strategien könnten auch (bedingt) Umstrukturierung des Programs berücksichtigen
+  \itemm{bspw. verzögern von Netzwerk- und I/O Aktivität}
   \item Berechne minimale Energiekosten bei optimal (energiesparenden) Komponenten
   \itemm{d.h. Energieverbrauch ist proportional zur Leistung 
     \item Obere Schranke für Energieeinsparpotenzial 
   }
-  \item Strategien könnten auch (bedingt) Umstrukturierung des Programs berücksichtigen
-  \itemm{bspw. verzögern von Netzwerk und I/O Aktivität}
-  \item Anwendbarkeit bei beliebigen Programmen (auch Lokal)
+  \item Anwendbarkeit bei beliebigen Programmen
 }
 
 \myframe{Simulation von Energiesparstrategien - Methodik}{  
-  \item Tracing der Auslastung von CPU, Netwerk, I/O-subsystemen in festen Intervalen
-  \item Verwende Auslastung der einzelnen Komponenten um Energieverbrauch zu schätzen  
-  \itemm{Lineare Interpolierung des Energieverbrauchs (Max/Min) bei Auslastung}
-  \itemm{ACPI Model für Energieverbrauch/Dauer eines Zustandwechsels}
-  \item Strategien können künftige Zustände erkennen und Komponenten bei dieser Last bestmöglich steuern
+  \item Auslastung von CPU, Netwerk, I/O-subsystemen periodisch tracen
+  \item Schätze Energieverbrauch der Komponenten basierend auf Auslastung
+    \itemm{Lineare Interpolierung des Energieverbrauchs - Min/Max Auslastung}
+  \item Bei Idle-Zeiten Stromsparmechanismen aktivieren
+    \itemm{ACPI Model für Energieverbrauch/Dauer des Zustandwechsels}
+  \item Strategien kennen künftige Last (im Trace) und steuern Stromsparmechanismen
   \itemm{Eine Umordung/Verschiebung der Last ist teilweise möglich}
   \item Vergleich der Simulierten Ergebnisse mit gemessenem Energieverbrauch
   \itemm{Ebenfalls eine Eichung des Models}
@@ -359,13 +362,13 @@ Prozessanzahl & Laufzeit in s & Simulierte Laufzeit & Simuliert/Real \\
 \myframe{Beispielstrategie - Approach Strategie}{
   \item Betrachte die Last der nächsten (zukünftigen) k-Intervalle
   \item Kosten Zustandswechsel und Aktivierung vs. Einsparungspotenzial
-  \itemm{$\Rightarrow$ minimale Zeit in der es sich lohnt die Komponente in den sparsameren Zustand zu versetzen}
+  \itemm{$\Rightarrow$ minimale Zeit für die es sich lohnt die Komponente in Sparmodus zu versetzen}
   \item Bei wenig Last $\le 10\%$  verzögere diese (wenn möglich) auf später
-  \itemm{10 x 10\% resultiert in einem Zustand mit 100\% Last}
+  \itemm{Bspw. 10 Intervalle a 10\% resultiert in einem Intervall mit 100\% Last}
 }
 
 \myframe{Ergebnisse - Jacobi PDE}{
- \item Iterationen: 5 (rechen intensiv), 500 (kommunikations intensiv)
+ \item Iterationen: 5 (Rechenintensiv), 500 (Kommunikationsintensiv)
  \item Für I/O wurde jede Iteration ein Checkpointing auf PVFS gemacht
  \item Die Abweichung zwischen gemessener Leistungsaufnahme und Simulierter beträgt im Beispiel $\leq$ 3\%.
   \begin{table}
@@ -386,8 +389,8 @@ Prozessanzahl & Laufzeit in s & Simulierte Laufzeit & Simuliert/Real \\
 }
 
 \myframe{Fazit}{
-  \item Auslastung bestimmt Energieeffizienz
-  \item Potenzial für Energieeinsparung vorhanden
+  \item Hohe Auslastung $\Rightarrow$ gute Energieeffizienz
+  \item Potenzial für Energieeinsparung durch Lastungleichheit etc. vorhanden
   \item Simulation ist ein Ansatz für Berechnung
   \item Abschätzung für Energiekosten und Verlust durch Programme
 }
